# evolution-kernel

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: tests.yml
adapters/token_ignition/: evaluate_golden_cases.py  golden_cases.json
docs/: protocol.md  token-ignition-first-task.md
evolution_kernel/: __init__.py  cli.py  config.py  governor.py  hard_stop.py  hard_stops.py  init_wizard.py  observer.py  sandbox.py  scope.py
evolution_kernel/templates/: benchmark.yml  coverage.yml  custom.yml  lint.yml  perf.yml
examples/: evolution.yml  run_demo.sh  run_demo_hard_stop.sh
examples/demo-target/: metrics.json
examples/demo-target/scripts/: status.sh
examples/demo_target/: metrics.json  setup.sh
examples/oss_fix_demo/: README.md  evolution.yml  setup.sh
examples/quickstart/: README.md  evolution.yml  setup.sh
examples/sandbox_demo/: evolution.yml  setup.sh
roles/: evaluator.py  executor.sh  goal_evaluator.py  planner.py  strategist.py
tests/: test_acceptance.py  test_cli.py  test_config.py  test_governor.py  test_hard_stop.py  test_init_wizard.py  test_issue10.py  test_issue14.py  test_observer.py  test_pr4.py  test_pr7a.py  test_pr7b.py  test_scope.py  test_token_ignition_goldens.py
tests/fixtures/: evaluator_accept.py  evaluator_branch_fitness.py  evaluator_reject.py  evaluator_src_fitness.py  executor.py  executor_branch.py  executor_escape_attempt.py  executor_oob.py  executor_oob_for_run.py  executor_unique_marker.py  goal_evaluator_not_reached.py  goal_evaluator_reached.py  planner.py  strategist.py
(+7 files in other folders)
