[project]
name = "evolution-kernel"
version = "0.1.0"
description = "A minimal autonomous evolution kernel with isolated planner, executor, evaluator roles."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
evolution-kernel = "evolution_kernel.cli:main"

